<resources>
    <string name="app_name">Budget Assistant</string>
    <string name="date_label">Date cannot be displayed!</string>
    <string name="expenses_title">Expenses</string>
    <string name="food_label">Food</string>
    <string name="rent_label">Rent</string>
    <string name="leisure_label"><![CDATA[Leisure & Entertainment]]></string>
    <string name="education_label">Education</string>
    <string name="health_label">Health</string>
    <string name="subscriptions_button"><![CDATA[Subscription & Insurance]]></string>
    <string name="other_label">Others</string>
    <string name="back_label"><![CDATA[< Back]]></string>
    <string name="expense_title">unknown expense</string>
    <string name="expense_description">Description field:</string>
    <string name="amount_spent">Amount spent:</string>
    <string name="save_label">Save</string>
    <string name="cancel_label">Cancel</string>
    <string name="travel_label">Travelling</string>
    <string name="income_button">Income</string>
    <string name="salary_label">Salary</string>
    <string name="allowance_label">Allowance</string>
    <string name="income_title">unknown income</string>
    <string name="incomes_title">Incomes</string>
    <string name="Transaction">Transactions</string>
    <string name="transaction_description">Description</string>
    <string name="transaction_amount">Amount</string>
    <string name="transaction_date">Date</string>
    <string name="TransactionList">Transaction list</string>
    <string name="pager">Pager</string>
    <string name="new_transaction">New Transaction</string>
    <string name="date_picker_title">Date</string>
    <string name="total_expenses_description">Total Expenditure</string>
    <string name="total_incomes_description">Total Revenue</string>
    <string name="savings_label">Savings</string>
    <string name="time_label">Time</string>

    <string-array name="spinner_time_array">
        <item>All-time</item>
        <item>Today</item>
        <item>This Week</item>
        <item>This Month</item>
        <item>This Year</item>
    </string-array>

    <string-array name="transactions_array">
        <item>None</item>
        <item>Food</item>
        <item>Travelling</item>
        <item>Rent</item>
        <item>Leisure</item>
        <item>Education</item>
        <item>Health</item>
        <item>Subscription</item>
        <item>Other Expenses</item>
        <item>Salary</item>
        <item>Allowance</item>
        <item>Other Incomes</item>
    </string-array>

</resources>