<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/date_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_label"
        app:backgroundTint="#A39E9E" />

    <Button
        android:id="@+id/salary_button"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:text="@string/salary_label" />

    <Button
        android:id="@+id/allowance_button"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:text="@string/allowance_label" />

    <Button
        android:id="@+id/others_button"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:text="@string/other_label" />
</LinearLayout>